# pyc

./: .gitignore  Cargo.toml  README.md  Trunk.toml
backend/: Cargo.toml
backend/src/: angle.rs  arrow.rs  board.rs  curve.rs  game.rs  graph.rs  intersection.rs  lib.rs  math.rs  tests.rs  tile.rs
backend/src/game/: board.rs  curve.rs
backend/src/graph/: edges.rs  graph.rs  tests.rs
backend/src/math/: angle.rs  turn.rs  utils.rs  vec2d.rs  vec_2d.rs
frontend/: Cargo.toml  index.html  styles.css
frontend/seed/: Cargo.toml  index.html
frontend/seed/src/: lib.rs  stylesheet.css
frontend/src/: board_canvas.rs  index.html  lib.rs  main.rs  tile_pad.rs
frontend/static/: index.html
frontend/styles/: default.css
frontend/yew/: Cargo.toml
frontend/yew/src/: lib.rs
graph/: Cargo.toml
graph/src/: graph.rs  tests.rs
plugins/my-plugin/: README.md  cycles.py
plugins/my-plugin/src/: edges.rs  graph.rs  lib.rs  path.rs  tests.rs
proto/: main.lua
prototype/pico_8/: monotone.p8
prototype/python/: angle_intervalls.py  normalize_angle.py  print_cycles.py
prototype/scripts/: curve_intersections.p8  in_poly.p8  monotone.p8  svg_arc.js
pyc-backend/: Cargo.toml
pyc-backend/src/: lib.rs
src/: board.rs  curve.rs  graph.rs  lib.rs  point.rs  tests.rs  utils.rs
src/utils/: point.rs
