[package]
name = "polycentrics-frontend"
description = "Web-frontend for Polycentrics using Yew."
readme = "../README.md"
version = "0.3.0"
license = "GPL-3.0-only"
authors = ["m4dh0rs3 <schoeps.benedikt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# If using wasm-pack (not needed with Trunk)
# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
backend = { path = "../backend", package = "polycentrics-backend" }

yew = "0.18"
# wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
console_error_panic_hook = "0.1"