[package]
version = "0.1.0"
name = "pyc"
authors = ["m4dh0rs3 <schoeps.benedikt@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
backend = { path = "../../backend" }
math = { git = "https://github.com/m4dh0rs3/math.git" }
syn = "=1.0.65" # Workround for https://github.com/rustwasm/wasm-bindgen/issues/2508, remove as soon as fixed!

#[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-Os']
