[package]
name = "yew"
version = "0.1.0"
authors = ["m4dh0rs3 <schoeps.benedikt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
backend = { path = "../../backend" }

math = { git = "https://github.com/m4dh0rs3/math" }

yew = "0.17"
wasm-bindgen = "0.2"

glam = "0.13"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]